# embassy

embassy-lpc55/: Cargo.toml
embassy-lpc55/src/: gpio.rs  lib.rs
examples/lpc55/: Cargo.toml
examples/lpc55/.cargo/: config.toml
